// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignore.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
const foo = {
  // prettier-ignore
  bar: 1,
}

=====================================output=====================================
const foo = {
  // prettier-ignore
  bar: 1
};

================================================================================
`;

exports[`ignore.js - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
const foo = {
  // prettier-ignore
  bar: 1,
}

=====================================output=====================================
const foo = {
  // prettier-ignore
  bar: 1
};

================================================================================
`;

exports[`ignore.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const foo = {
  // prettier-ignore
  bar: 1,
}

=====================================output=====================================
const foo = {
  // prettier-ignore
  bar: 1
};

================================================================================
`;
